k8s-manifests/api-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-node
  template:
    metadata:
      labels:
        app: api-node
    spec:
      containers:
        - name: api-node
          image: 514994861653.dkr.ecr.ap-south-1.amazonaws.com/multi-cicd-api-node:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: api-node-service
spec:
  selector:
    app: api-node
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
