k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /node
            pathType: Prefix
            backend:
              service:
                name: api-node-service
                port:
                  number: 3000
          - path: /py
            pathType: Prefix
            backend:
              service:
                name: api-py-service
                port:
                  number: 5000
